--- a/App-rshasum/Changes
+++ b/App-rshasum/Changes
@@ -1,5 +1,8 @@
 Revision history for App-rshasum
 
+0.6.0       2020-04-19
+    - Add more documentation.
+
 0.4.0       2020-04-17
     - Add the --skip flag
     - Add the --start-path flag
